package com.example.backend.enums;

public enum Rol {
    SUPER_ADMIN,
    ADMIN,
    USER
}
