package com.example.backend.enums;

public enum TipoReporte {
    BACHE,
    ACCIDENTE,
    CALLE_SIN_LUZ,
    CORTE_DE_LUZ,
    BASURA,
    FALTA_DE_AGUA,
    OTRO
}
