package com.example.backend.enums;

public enum TipoVoto {
    CONFIRMA,
    NIEGA
    
}
